fix javadoc for Java 11
Signed-off-by: Florian Fendt <Florian.Fendt@bosch-si.com>