@@ -36,6 +36,16 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <additionalOptions>
+                        <option>--add-exports</option>
+                        <option>java.base/sun.security.util=ALL-UNNAMED</option>
+                    </additionalOptions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
